# Event-Scanner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  input_validation.temp.md  osv-scanner.toml  rustfmt.toml
.code/agents/1/: exec-call_wiF16qNGLWo0v6oY08FT88K7.txt
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: check.yml  ci.yml  cla.yml  publish.yml  scorecard.yml  test.yml
examples/historical_scanning/: Cargo.toml  main.rs
examples/latest_events_scanning/: Cargo.toml  main.rs
examples/latest_events_then_live_scanning/: Cargo.toml  main.rs
examples/live_scanning/: Cargo.toml  main.rs
examples/simple_counter/: Cargo.toml  main.rs
examples/sync_from_block_scanning/: Cargo.toml  main.rs
examples/sync_from_latest_scanning/: Cargo.toml  main.rs
examples/sync_scanning/: Cargo.toml  main.rs
src/: block_channel.rs  block_range_scanner.rs  block_range_scanner_ref.rs  block_scanner.rs  block_scanner_new.rs  builder.rs  callback.rs  callback_strategy.rs  error.rs  event_filter.rs  event_listener.rs  event_scanner.rs  event_scanner_ref.rs  lib.rs  main.rs  robust_provider.rs  robust_subscription.rs  safe_provider.rs  scanner.rs  type_state_scanner.rs  types.rs
src/block_range_scanner/: message.rs  reorg_handler.rs  ring_buffer.rs
src/callback/: mod.rs
src/callback/strategy/: fixed_retry.rs  mod.rs  state_sync_aware.rs
src/event_lib/: error.rs  listener.rs  mod.rs  scanner.rs
src/event_lib/modes/: historic.rs  latest.rs  live.rs  mod.rs  subscribe.rs  sync.rs
src/event_lib/scanner/: mod.rs
src/event_scanner/: error.rs  filter.rs  listener.rs  message.rs  mod.rs  scanner.rs
src/event_scanner/modes/: common.rs  historic.rs  latest.rs  live.rs  mod.rs  sync.rs
src/event_scanner/modes/sync/: from_block.rs  from_latest.rs
src/event_scanner/scanner/: common.rs  historic.rs  latest.rs  live.rs  mod.rs  sync.rs
src/event_scanner/scanner/sync/: from_block.rs  from_latest.rs  mod.rs
src/robust_provider/: builder.rs  error.rs  mod.rs  provider.rs  provider_conversion.rs  robust_subscription.rs  subscription.rs  types.rs
src/test_utils/: macros.rs  mod.rs  types.rs
tests/: block_range_scanner.rs  callbacks.rs  common.rs  lib.rs  live_basic.rs  live_filters.rs  live_routing.rs  live_scanning_tests.rs  macros.rs  mod.rs  ordering.rs  performance.rs
tests/common/: mock_callbacks.rs  mod.rs  setup_scanner.rs  test_counter.rs
tests/historic/: basic.rs
tests/historic_mode/: basic.rs
tests/historic_to_live/: basic.rs  from_latest.rs  mod.rs  reorg.rs  sync_from_future.rs
tests/latest_events/: basic.rs  mod.rs  then_live.rs
tests/live/: basic.rs  optional_fields.rs  performance.rs  reorg.rs
tests/live_mode/: basic.rs  callbacks.rs  error_propagation.rs  mod.rs  optional_fields.rs  ordering.rs  performance.rs  reorg.rs
tests/sync/: from_block.rs  from_latest.rs  mod.rs
