[workspace]
members = [
    ".",
    "examples/historical_scanning",
    "examples/simple_counter",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.0.30", features = ["full"] }
alloy-node-bindings = "1.0.30"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.16"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hex = "0.4"

[package]
name = "event-scanner"
version = "0.1.0"
edition = "2024"
publish = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
alloy-node-bindings = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
