[package]
name = "historical_scanning"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "historical_scanning"
path = "main.rs"

[dependencies]
alloy = { workspace = true }
alloy-node-bindings = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
event-scanner = { path = "../.." }