[package]
name = "historical_scanning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "historical_scanning"
path = "main.rs"

[dependencies]
alloy.workspace = true
alloy-node-bindings.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
event-scanner = { path = "../.." }
